code/force-app/main/default/objects/FinServ__RollupByLookupFilterCriteria__c/fields/FinServ__FieldName__c.field-meta.xml
<CustomField>
    <fullName>FinServ__FieldName__c</fullName>
    <label>Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>