code/force-app/main/default/objects/FinServ__RollupByLookupFilterCriteria__c/fields/FinServ__FieldValue__c.field-meta.xml
<CustomField>
    <fullName>FinServ__FieldValue__c</fullName>
    <label>Field Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>