code/force-app/main/default/objects/FinServ__RollupByLookupFilterCriteria__c/fields/FinServ__RollupByLookupConfig__c.field-meta.xml
<CustomField>
    <fullName>FinServ__RollupByLookupConfig__c</fullName>
    <label>Parent Configuration</label>
    <referenceTo>FinServ__RollupByLookupConfig__c</referenceTo>
    <relationshipLabel>Rollup By Lookup Filter Criterias</relationshipLabel>
    <relationshipName>RollupByLookupFilterCriterias</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>